--- a/css/app.css
+++ b/css/app.css
@@ -1,14 +1,60 @@
-/* Write your code here */
-
-.announcement{
-    border: 2px solid black;
-    padding: 6px;
-    background-color:grey;
-    border-radius:20px;
+* {
+   margin: 0;
+   padding: 0;
 }
 
-button{
-    border: 1px solid black;
-    float:right;
-    border-radius:5px;
+html {
+   box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+   box-sizing: inherit;
+}
+
+ul {
+   list-style: none;
+}
+
+ul li {
+   margin: 0;
+   padding: 0.5em;
+}
+
+ul li img {
+   width: 100%;
+}
+
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.75);
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+p{
+    color:white;
+    font-size:27px;
+    font-family:sans-serif;
+}
+
+@media screen and (min-width: 768px) {
+   ul li {
+       float: left;
+       width: 50%;
+   }
+}
+
+@media screen and (min-width: 960px) {
+   ul li {
+       width: 25%;
+   }
 }
